<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.ConfigFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/heads_or_tails"
        android:orientation="vertical">

        <TextView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_value"
            android:layout_marginTop="@dimen/margin_top_value"
            android:layout_marginEnd="@dimen/margin_value"
            android:text="@string/player_1_name"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/configPlayer1Name"
            app:layout_constraintEnd_toStartOf="@+id/configPlayer1Name"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_value"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/player_2_name"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toStartOf="@+id/configPlayer2Name"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player1"
            app:layout_constraintVertical_bias="0.156" />

        <EditText
            android:id="@+id/configPlayer1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_value"
            android:ems="10"
            android:maxLength="20"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/player1"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/configPlayer2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:layout_marginEnd="@dimen/margin_value"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/player2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginTop="@dimen/margin_value" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:clickable="false"
            android:text="@string/start_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/configPlayer2Name" />

        <TextView
            android:id="@+id/playerNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_value"
            android:text="@string/config_text"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/player1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>